--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,10 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Certificate Management System1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Certificate Management System1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Certificate2_Replace" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Certificate2_Replace.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Certificate Management System1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Certificate Management System1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Certificate1_Replace" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Certificate1_Replace.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Certificate3_Replace" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Certificate3_Replace.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Certificate4_Replace" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Certificate4_Replace.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
